Updated UserStory#32
